# Poloka

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
core/: block.cpp  block.h  blockchain.cpp  blockchain.h  pow.cpp  pow.h  transaction.cpp  transaction.h  wallet.cpp  wallet.h
network/: node.cpp  node.h  peer.cpp  peer.h
